@@ -14,6 +14,8 @@ documents those changes that are of interest to users and admins.
  -- Added bluegene section to troubleshooting guide (web page). 
  -- NOTE: Requires cold-start when moving from 1.2.0-pre6, save state 
     info for jobs changed.
+ -- BLUEGENE - Changed logic for wiring bgl blocks to be more maintainable.
+    (Haven't tested on large system yet, works on 2 base partition system)
 
 * Changes in SLURM 1.2.0-pre6
 =============================
